[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/GuiParts/CylinderSettings.gd" type="Script" id=1]
[ext_resource path="res://Scenes/GuiParts/CylinderOptionsGrid.gd" type="Script" id=3]

[node name="CylinderSettings" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CylinderOptionsGrid" type="GridContainer" parent="."]
margin_right = 1024.0
margin_bottom = 96.0
columns = 3
script = ExtResource( 3 )

[node name="infoLabel1" type="Label" parent="CylinderOptionsGrid"]
margin_top = 1.0
margin_right = 508.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Height"

[node name="HeightSlider" type="HSlider" parent="CylinderOptionsGrid"]
margin_left = 512.0
margin_right = 1020.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 3.0
step = 0.1
value = 2.0

[node name="valueLabel1" type="Label" parent="CylinderOptionsGrid"]
margin_left = 1024.0
margin_top = 1.0
margin_right = 1024.0
margin_bottom = 15.0
align = 1

[node name="infoLabel2" type="Label" parent="CylinderOptionsGrid"]
margin_top = 21.0
margin_right = 508.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "Top Radius"

[node name="TopRadiusSlider" type="HSlider" parent="CylinderOptionsGrid"]
margin_left = 512.0
margin_top = 20.0
margin_right = 1020.0
margin_bottom = 36.0
size_flags_horizontal = 3
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="valueLabel2" type="Label" parent="CylinderOptionsGrid"]
margin_left = 1024.0
margin_top = 21.0
margin_right = 1024.0
margin_bottom = 35.0
align = 1

[node name="infoLabel3" type="Label" parent="CylinderOptionsGrid"]
margin_top = 41.0
margin_right = 508.0
margin_bottom = 55.0
size_flags_horizontal = 3
text = "Bottom Radius"

[node name="BottomRadiusSlider" type="HSlider" parent="CylinderOptionsGrid"]
margin_left = 512.0
margin_top = 40.0
margin_right = 1020.0
margin_bottom = 56.0
size_flags_horizontal = 3
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="valueLabel3" type="Label" parent="CylinderOptionsGrid"]
margin_left = 1024.0
margin_top = 41.0
margin_right = 1024.0
margin_bottom = 55.0
align = 1

[node name="infoLabel4" type="Label" parent="CylinderOptionsGrid"]
margin_top = 61.0
margin_right = 508.0
margin_bottom = 75.0
size_flags_horizontal = 3
text = "Radial Segments"

[node name="RadialSegmentsSlider" type="HSlider" parent="CylinderOptionsGrid"]
margin_left = 512.0
margin_top = 60.0
margin_right = 1020.0
margin_bottom = 76.0
size_flags_horizontal = 3
min_value = 4.0
max_value = 128.0
value = 32.0

[node name="valueLabel4" type="Label" parent="CylinderOptionsGrid"]
margin_left = 1024.0
margin_top = 61.0
margin_right = 1024.0
margin_bottom = 75.0
align = 1

[node name="infoLabel5" type="Label" parent="CylinderOptionsGrid"]
margin_top = 81.0
margin_right = 508.0
margin_bottom = 95.0
size_flags_horizontal = 3
text = "Rings"

[node name="RingsSlider" type="HSlider" parent="CylinderOptionsGrid"]
margin_left = 512.0
margin_top = 80.0
margin_right = 1020.0
margin_bottom = 96.0
size_flags_horizontal = 3
min_value = 3.0
max_value = 128.0
value = 32.0

[node name="valueLabel5" type="Label" parent="CylinderOptionsGrid"]
margin_left = 1024.0
margin_top = 81.0
margin_right = 1024.0
margin_bottom = 95.0
align = 1

[node name="hsep1" type="HSeparator" parent="."]
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 104.0

[node name="GenSideCheckBox" type="CheckBox" parent="."]
margin_top = 108.0
margin_right = 1024.0
margin_bottom = 132.0
pressed = true
text = "Generate Side Maze"

[node name="SideMazeGrid" type="GridContainer" parent="."]
margin_top = 136.0
margin_right = 1024.0
margin_bottom = 216.0
grow_horizontal = 0
grow_vertical = 0
columns = 2

[node name="label1" type="Label" parent="SideMazeGrid"]
margin_top = 5.0
margin_right = 510.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "   Grid Vertical"
valign = 1

[node name="GridVerticalSpinBox" type="SpinBox" parent="SideMazeGrid"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = 5.0
value = 20.0
align = 1

[node name="label2" type="Label" parent="SideMazeGrid"]
margin_top = 33.0
margin_right = 510.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "   Grid Horizontal"
valign = 1

[node name="GridHorizontalSpinBox" type="SpinBox" parent="SideMazeGrid"]
margin_left = 514.0
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 52.0
size_flags_horizontal = 3
min_value = 5.0
value = 10.0
align = 1

[node name="label3" type="Label" parent="SideMazeGrid"]
margin_top = 61.0
margin_right = 510.0
margin_bottom = 75.0
size_flags_horizontal = 3
text = "   Seed"
valign = 1

[node name="SeedLineEdit" type="LineEdit" parent="SideMazeGrid"]
margin_left = 514.0
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 80.0
align = 1
max_length = 32
placeholder_text = "seed"

[node name="GenTopCheckBox" type="CheckBox" parent="."]
margin_top = 220.0
margin_right = 1024.0
margin_bottom = 244.0
disabled = true
text = "Generate Top Maze"

[node name="TopMazeGrid" type="GridContainer" parent="."]
visible = false
margin_top = 112.0
margin_right = 1024.0
margin_bottom = 136.0
grow_horizontal = 0
grow_vertical = 0
columns = 2

[node name="label1" type="Label" parent="TopMazeGrid"]
margin_top = 5.0
margin_right = 510.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "   In Radius"
valign = 1

[node name="GridTopSpinBox" type="SpinBox" parent="TopMazeGrid"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = 5.0
max_value = 50.0
value = 10.0
align = 1

[node name="label2" type="Label" parent="TopMazeGrid"]
margin_top = 61.0
margin_right = 510.0
margin_bottom = 75.0
size_flags_horizontal = 3
text = "   Seed"
valign = 1

[node name="SeedLineEdit" type="LineEdit" parent="TopMazeGrid"]
margin_left = 514.0
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 80.0
align = 1
max_length = 32
placeholder_text = "seed"

[node name="GenBottonCheckBox" type="CheckBox" parent="."]
margin_top = 248.0
margin_right = 1024.0
margin_bottom = 272.0
disabled = true
text = "Generate Bottom Maze"

[node name="BottomMazeGrid" type="GridContainer" parent="."]
visible = false
margin_top = 168.0
margin_right = 1024.0
margin_bottom = 192.0
grow_horizontal = 0
grow_vertical = 0
columns = 2

[node name="label1" type="Label" parent="BottomMazeGrid"]
margin_top = 5.0
margin_right = 510.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "   In Radius"
valign = 1

[node name="GridBottomSpinBox" type="SpinBox" parent="BottomMazeGrid"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = 5.0
max_value = 50.0
value = 10.0
align = 1

[node name="label2" type="Label" parent="BottomMazeGrid"]
margin_top = 61.0
margin_right = 510.0
margin_bottom = 75.0
size_flags_horizontal = 3
text = "   Seed"
valign = 1

[node name="SeedLineEdit" type="LineEdit" parent="BottomMazeGrid"]
margin_left = 514.0
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 80.0
align = 1
max_length = 32
placeholder_text = "seed"

[node name="hsep2" type="HSeparator" parent="."]
margin_top = 276.0
margin_right = 1024.0
margin_bottom = 280.0

[node name="GenerateButton" type="Button" parent="."]
margin_top = 284.0
margin_right = 1024.0
margin_bottom = 304.0
text = "Generate"

[connection signal="toggled" from="GenSideCheckBox" to="." method="_on_GenSideCheckBox_toggled"]
[connection signal="toggled" from="GenTopCheckBox" to="." method="_on_GenTopCheckBox_toggled"]
[connection signal="toggled" from="GenBottonCheckBox" to="." method="_on_GenBottonCheckBox_toggled"]
